deleted overflow:hidden to solve food gallery page display problem

--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,6 @@ body {
   background-color: var(--background-color);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  overflow: hidden;
 
 }
 
